      meaning there was no way to supply *only* this argument (RT #50576)

    [ DOCUMENTATION ]
    - clarify documentation regarding query_string method (RT #48370)
    - links fixed in some perldoc (Thanks to Michiel Beijen)

    [ TESTING ]
    - add t/changes.t for testing this Changes file
    - test case for RT #31107 confirming multipart parsing is to spec

4.02 2014-06-09

    [ NEW FEATURES ]
    - CGI::Carp learns noTimestamp / $CGI::Carp::NO_TIMESTAMP to prevent
      timestamp in messages (RT #82364, EDAVIS@cpan.org)
    - multipart_init and multipart_start learn -charset option (RT #22737)

    [ SPEC / BUG FIXES ]
    - Support multiple cookies when passing an ARRAY ref with -set-cookie
      (RT #15065, JWILLIAMS@cpan.org)

    [ DOCUMENTATION ]
    - Made licencing information consistent and remove duplicate comments
      about licence details, corrected location to report bugs (RT #38285)

4.01 2014-05-27

    [ DOCUMENTATION ]
    - CGI.pm hasn't been removed from core *just* yet, but will be soon:
      http://perl5.git.perl.org/perl.git/commitdiff/e9fa5a80 

4.00 2014-05-22

    [ INTERNALS ]
    - CGI::Fast split out into its own distribution, related files and tests removed
    - developer test added for building with perlbrew

    [ DOCUMENTATION ]
    - Update perldoc to explain that CGI.pm has been removed from perl core
    - Make =head2 perldoc less shouty (RT #91140)
    - Tickets migrated from RT to github issues (both CGI and CGI.pm distributions)
    - Repointing bugtracker at newly forked github repo and note that Lee Johnson
      is the current maintainer.
    - Bump version to 4.00 for clear boundary of above changes

Version 3.65 Feb 11, 2014

    [INTERNALS]
    - Update Makefile to refine where CGI.pm gets installed 
      (Thanks to bingo, rjbs: https://github.com/markstos/CGI.pm/pull/30)

Version 3.64 Nov 23, 2013

    [BUG FIXES]
    - Avoid warning about "undefined variable in user_agent in some cases (RT#72882)
